# manga-to-epub

./: .gitignore  LICENSE  MAINTAINING.md  Makefile  README.md  TODO.md  epub_batch_model.py  epub_layout_gui.py  epub_layout_model.py  epub_layout_preview.py  epub_series_model.py  epub_writer.py  pdf_to_cbz_lossless.py  pdf_to_epub_lossless.py  pyproject.toml  requirements.txt  test_epub_batch_model.py  test_epub_layout_gui.py  test_epub_layout_model.py  test_epub_naming.py  test_epub_series_model.py  test_pdf_to_cbz_lossless.py  test_pdf_to_epub_lossless.py  todo.md
docs/: diagnosis-workflow.md
scripts/: epub_layout_gui.py  manga_to_epub.py  pdf_to_epub_lossless.py
tests/: gui_helpers.py  test_archive_source.py  test_epub_batch_model.py  test_epub_layout_diagnosis_csv.py  test_epub_layout_diagnosis_damage.py  test_epub_layout_diagnosis_runner.py  test_epub_layout_diagnosis_state.py  test_epub_layout_diagnosis_suggestions.py  test_epub_layout_gui.py  test_epub_layout_gui_commands.py  test_epub_layout_gui_diagnosis.py  test_epub_layout_gui_editing.py  test_epub_layout_gui_project.py  test_epub_layout_gui_series.py  test_epub_layout_gui_workbench.py  test_epub_layout_history.py  test_epub_layout_model.py  test_epub_layout_preview.py  test_epub_layout_series_workflow.py  test_epub_naming.py  test_epub_page_factory.py  test_epub_series_model.py  test_fitz_compat.py  test_insert_point_scorer.py  test_pdf_image_extraction.py  test_pdf_object_parser.py  test_pdf_png.py  test_pdf_to_cbz_lossless.py  test_pdf_to_epub_lossless.py  test_project_guardrails.py  (+2 more)
(+99 files in other folders)
