[project]
name = "manga-to-epub"
version = "0.1.0"
description = "Lossless manga source to EPUB tools for Apple Books layout tuning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24",
  "Pillow>=10",
  "pillow-heif>=1.0",
]

[project.scripts]
manga-to-epub = "manga_pdf_to_epub.cli.pdf_to_epub_lossless:main"
pdf-to-epub-lossless = "manga_pdf_to_epub.cli.pdf_to_epub_lossless:main"
epub-layout-gui = "manga_pdf_to_epub.gui.layout_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
